--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ag-grid-react": "^32.2.0",
     "axios": "^1.7.7",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
