--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
+    "joi": "^17.13.3",
     "nodemon": "^3.1.5",
     "prisma": "^5.19.1"
   }
